# android_vendor_amlogic_common_adla_lib

./: Android.bp  Android.mk  BUILD.bazel  Makefile  VERSION
adla/kmd/drv/common/: adlak_context.c  adlak_context.h  adlak_device.c  adlak_device.h  adlak_inference.c  adlak_mm.c  adlak_queue.c  adlak_queue.h  adlak_submit.c  adlak_submit.h  adlak_version.h
adla/kmd/drv/common/mm/: adlak_mm_common.c
adla/kmd/drv/port/: adlak_os.h
adla/kmd/drv/port/os/linux/: adlak_os.c  adlak_os_base.h
adla/kmd/drv/port/os/linux/mm/: adlak_mm_os_common.c  adlak_mm_os_common.h
adla/kmd/drv/port/platform/: adlak_hw.c  adlak_reg.h
adla/kmd/drv/port/platform/linux/: adlak_fops.c  adlak_platform_config.c  adlak_platform_config.h  adlak_platform_device.c
adla/kmd/drv/uapi/: adlak_api_base.h
adla/kmd/drv/uapi/linux/: adlak_api.h
service/: Android.mk  android.hardware.neuralnetworks-service-adla-all.rc  android.hardware.neuralnetworks@1.3-service-aml-driver  android.hardware.neuralnetworks@1.3-service-aml-driver.rc  android.hardware.neuralnetworks@1.3-service-aml-driver.xml
service/service_32/: android.hardware.neuralnetworks@1.3-service-aml-driver
service/service_64/: android.hardware.neuralnetworks@1.3-service-aml-driver
service/t/service_32/: android.hardware.neuralnetworks@1.3-service-aml-driver
service/t/service_64/: android.hardware.neuralnetworks@1.3-service-aml-driver
service/u/service_32/: android.hardware.neuralnetworks-service-aidl-driver
service/u/service_64/: android.hardware.neuralnetworks-service-aidl-driver
