load("//build/kernel/kleaf:kernel.bzl", "kernel_module")

kernel_module(
    name = "adla",
    srcs = glob(
        ["**"],
        exclude = [
            "BUILD.bazel",
        ],
    ),
    outs = [
        "adla_core.ko",
    ],
    kernel_build = "//common:amlogic",
    visibility = [
        "//common:__pkg__",
    ],
)
